--- a/src/index.css
+++ b/src/index.css
@@ -78,19 +78,17 @@ body {
   }
 
   .nav-hover-btn {
-    @apply relative ms-10 font-general text-lg uppercase text-black after:absolute after:-bottom-0.5 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-neutral-900 after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100  cursor-pointer;
+    @apply relative ms-10 font-general text-lg uppercase text-violet-50 after:absolute after:-bottom-0.5 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-violet-200 after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100  cursor-pointer;
   }
   .work-hover-btn {
     @apply relative ms-10 font-general text-xs uppercase text-pink-800 after:absolute after:-bottom-0.5 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-pink-800 after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100 cursor-pointer;
   }
-  .hero-hover-btn {
-    @apply relative ms-10 font-general text-xs uppercase text-white after:absolute after:-bottom-0.5 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-white after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100 cursor-pointer;
-  }
+
   .intro-hover-btn {
     @apply relative font-general text-xs uppercase text-pink-800 after:absolute after:-bottom-0.5 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-pink-800 after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100 cursor-pointer;
   }
   .footer-hover-btn {
-    @apply relative ms-10 font-general text-lg uppercase text-black 
+    @apply relative ms-10 font-general text-base uppercase text-black 
       after:absolute after:-bottom-0.5 after:left-0 
       after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 
       after:bg-pink-800 after:transition-transform after:duration-300 
