--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,14 @@
 
 html {
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   width: 100dvw;
   overflow-x: hidden;
   background-color: white;
@@ -88,7 +93,7 @@ body {
     @apply relative font-general text-xs uppercase text-pink-800 after:absolute after:-bottom-0.5 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 after:bg-pink-800 after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] hover:after:origin-bottom-left hover:after:scale-x-100 cursor-pointer;
   }
   .footer-hover-btn {
-    @apply relative ms-10 font-general text-base uppercase text-black 
+    @apply relative font-general text-base uppercase text-black
       after:absolute after:-bottom-0.5 after:left-0 
       after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 
       after:bg-pink-800 after:transition-transform after:duration-300 
